--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
           </div>
           
           <nav>
-            <a href="{{site.baseurl}}/">Projects</a>
+            <a href="{{site.baseurl}}/resume">Resume</a>
+            <a href="{{site.baseurl}}/projects">Projects</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
