Added a vertical line before resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,9 @@
           </div>
           
           <nav>
-            <a href="{{site.baseurl}}/resume">Resume</a>
+            <div class="verticalLine">
+              <a href="{{site.baseurl}}/resume">Resume</a>
+            </div>
             <a href="{{site.baseurl}}/projects">Projects</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
