--- a/style.scss
+++ b/style.scss
@@ -277,9 +277,10 @@ nav {
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
 }
-.verticalLine {
-    border-left: thick solid #ff0000;
+.verticalLine{
+    border-right: thick solid #ff0000;
 }
+
 footer {
   padding: 20px 0;
   text-align: center;
