--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
           
           <div class="site-info">
-            
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <div class="verticalLine" />
+            <div class="verticalLine">
+              <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            </div>
             <p class="site-description">{{ site.description }}</p>
           </div>
           
