--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <a href="{{site.baseurl}}/resume">Resume</a>
             <a href="{{site.baseurl}}/projects">Projects</a>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <!--<a href="{{ site.baseurl }}/about">About</a> -->
           </nav>
         </header>
       </div>
